<resources>
    <string name="app_name">Timetable</string>
    <string name="title_home">Home</string>
    <string name="course_id">Search CourseID</string>
    <string name="tutorial">Search Tutorial</string>
    <string name="enrol">Enrol</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="enrolled_courses_title">You have enrolled in:</string>
    <string name="enrolled_courses">Seems you need to enrol some courses :)</string>
    <string name="recommend_courses_title">We would recommend you to enrol:</string>
    <string name="recommend_courses">You need to enrol some courses, then we can make recommendation:)</string>
    <string name="search_hint">Courses that you have enrolled will not appear in search result.</string>
    <string name="guide_title">\n### Welcome to use ANU Timetable ###</string>
    <string name="guide_enrol_title">\n\nEnrol Page Introduction\n</string>
    <string name="guide_enrol_list">You can easily check which courses you have enrolled in this page!
        You can delete these courses from your list as well. \n \nIf you don\'t know which course you can choose.
        Here is the answer! We made personal recommendation for ANU COMP students based on ANU computing specializations
        and course conflict descriptions. \n
        \nClick the search button. You can search all ANU courses with ANU course code. \n
        \nYou can select which tutorial you want to enrol. If there are conflicts,
        you will see a detailed message when you click the enrol button.</string>
    <string name="guide_calender_title">\n\nCalender Page Introduction\n</string>
    <string name="guide_calender_description">
        This page is the first page you will see when you opening the application.\n
        \nIt displays the calender of current week for the courses you already enrolled.\n
        \nWhen clicking one of the course blocks, a dialogue will pop up and show the time and location of this lesson.\n
        \nThere is a button named \"DETAIL\" at the right bottom corner of this dialog, which will open a web browser to display the detail info of this course.\n
    </string>
    <string name="guide_add_title">Add page introduction</string>
    <string name="guide_add_list">
        You can add and edit course information in this page!\n
        \nInput the course ID and choose the semester of it.Press the search button to get information.\n
        \nYou can press yellow add button to add information and edit the information.\n
        \nIf you want to delete some information, you can long press it and choose YES.\n
        \nPress SAVE button to save the information you add. Press the DELETE button to delete the course from the course list.
    </string>

    <string-array name="semester">
        <item>S1</item>
        <item>S2</item>
        <item>X1</item>
        <item>X2</item>
        <item>X3</item>
        <item>X4</item>
    </string-array>

    <!--Not sure this is all the class type;-->
    <string-array name="classType">
        <item>   </item>
        <item>Lec</item>
        <item>Tut</item>
        <item>Wor</item>
        <item>Sem</item>
        <item>Com</item>
        <item>Pra</item>
        <item>Stu</item>
        <item>Lan</item>
        <item>Prac</item>
        <item>Fie</item>
        <item>Let</item>
        <item>Dro</item>
        <item>Exa</item>
        <item>Sup</item>
        <item>Aff</item>
        <item>War</item>
        <item>FIL</item>
        <item>Fieldwork</item>
        <item>Onl</item>
        <item>AdH</item>
        <item>Scr</item>
    </string-array>

    <string-array name="classAph">
        <item> </item>
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
        <item>E</item>
        <item>E</item>
        <item>F</item>
        <item>G</item>
        <item>H</item>
        <item>I</item>
        <item>G</item>
        <item>K</item>
        <item>L</item>
        <item>M</item>
        <item>N</item>
        <item>O</item>
        <item>P</item>
        <item>Q</item>
        <item>R</item>
        <item>S</item>
        <item>T</item>
        <item>U</item>
        <item>V</item>
        <item>W</item>
        <item>X</item>
        <item>Y</item>
        <item>Z</item>
    </string-array>

    <string-array name="classNum">
        <item>  </item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
    </string-array>

    <string-array name="day">
        <item>   </item>
        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thu</item>
        <item>Fri</item>
    </string-array>

    <string-array name="start">
        <item>     </item>
        <item>08:00</item>
        <item>08:30</item>
        <item>09:00</item>
        <item>09:30</item>
        <item>10:00</item>
        <item>10:30</item>
        <item>11:00</item>
        <item>11:30</item>
        <item>12:00</item>
        <item>12:30</item>
        <item>13:00</item>
        <item>13:30</item>
        <item>14:00</item>
        <item>14:30</item>
        <item>15:00</item>
        <item>15:30</item>
        <item>16:00</item>
        <item>16:30</item>
        <item>17:00</item>
        <item>17:30</item>
        <item>18:00</item>
        <item>18:30</item>
        <item>19:00</item>
        <item>19:30</item>
        <item>20:00</item>
        <item>20:30</item>
        <item>21:00</item>
        <item>21:30</item>
        <item>22:00</item>
    </string-array>

    <string-array name="end">
        <item>     </item>
        <item>08:00</item>
        <item>08:30</item>
        <item>09:00</item>
        <item>09:30</item>
        <item>10:00</item>
        <item>10:30</item>
        <item>11:00</item>
        <item>11:30</item>
        <item>12:00</item>
        <item>12:30</item>
        <item>13:00</item>
        <item>13:30</item>
        <item>14:00</item>
        <item>14:30</item>
        <item>15:00</item>
        <item>15:30</item>
        <item>16:00</item>
        <item>16:30</item>
        <item>17:00</item>
        <item>17:30</item>
        <item>18:00</item>
        <item>18:30</item>
        <item>19:00</item>
        <item>19:30</item>
        <item>20:00</item>
        <item>20:30</item>
        <item>21:00</item>
        <item>21:30</item>
        <item>22:00</item>
    </string-array>


</resources>
