<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".GuideActivity">

    <ScrollView
        android:id="@+id/sv_guide"
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <LinearLayout
            android:id="@+id/rl_guide"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_guide_title"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/guide_title"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_marginBottom="@dimen/enrol_item_margin"/>

            <!--Add calender page introduction here.-->

            <TextView
                android:id="@+id/tv_enrol_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/guide_enrol_title"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:layout_marginBottom="@dimen/enrol_item_margin"/>

            <LinearLayout
                android:id="@+id/ll_enrol"
                android:layout_height="600dp"
                android:layout_width="match_parent"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/iv_enrol"
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:src="@drawable/img_enrol"
                    android:scaleType="centerCrop" />
                <TextView
                    android:id="@+id/tv_enrol"
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:text="@string/guide_enrol_list"/>
            </LinearLayout>

            <!--Add add page introduction here.-->

        </LinearLayout>
    </ScrollView>
</LinearLayout>