<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".EnrolActivity">

    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_course"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/courseid" />

        <TextView
            android:id="@+id/tv_courseID"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="5dp"
            android:text="..."
            android:gravity="center"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_lectureDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll1"
        android:layout_marginBottom="10dp"
        android:scrollbars="vertical"
        android:maxLines="5" />

    <Button
        android:id="@+id/btn_tutorial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_lectureDetails"
        android:layout_marginBottom="10dp"
        android:text="@string/tutorial" />

    <ScrollView
        android:id="@+id/scrollable"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@id/btn_tutorial">
        <LinearLayout
            android:id="@+id/ll_scroll"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:orientation="vertical"/>
    </ScrollView>

    <Button
        android:id="@+id/btn_enrol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:text="@string/enrol" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_toRightOf="@id/btn_tutorial"
        android:text="@string/cancel" />

    <Button
        android:id="@+id/btn_addnewcourse"
        android:layout_width="55dp"
        android:layout_height="52dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:background="@drawable/icon_add_course" />

</RelativeLayout>